[package]
name = "fudge"
version = "0.0.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fudge-core = { workspace = true }
fudge-companion = { workspace = true }

polkadot-parachain-primitives = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }

[features]
default = []