[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fudge = { workspace = true }
fudge-core = { workspace = true }
fudge-test-runtime = { workspace = true }
polkadot-test-runtime = { workspace = true }
parity-scale-codec = { workspace = true }
polkadot-service = { workspace = true }
polkadot-core-primitives = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-std = { workspace = true }
sp-tracing = { workspace = true }
sp-inherents = { workspace = true }
thiserror = { workspace = true }
