[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fudge = { workspace = true }
fudge-core = { workspace = true }
fudge-test-runtime = { workspace = true, features = ["std"] }
polkadot-test-runtime = { workspace = true, features = ["std"] }
parity-scale-codec = { workspace = true, features = ["std"] }
polkadot-service = { workspace = true, default-features = true }
polkadot-core-primitives = { workspace = true, features = ["std"] }
sp-consensus-babe = { workspace = true, features = ["std"] }
sp-std = { workspace = true, features = ["std"] }
sp-tracing = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
thiserror = { workspace = true, default-features = true }
