[package]
name = "fudge-test-runtime"
version = "0.10.12"
edition = "2021"
build = "build.rs"
license = "LGPL-3.0"

[dependencies]
parity-scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
integer-sqrt = { workspace = true, default-features = false }
safe-mix = { workspace = true, default-features = false }
smallvec = { workspace = true, default-features = false }
static_assertions = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
rustc-hex = { workspace = true, optional = true, default-features = false }
serde = { workspace = true, optional = true, default-features = false }

# parachain
staging-parachain-info = { workspace = true, default-features = false }
cumulus-pallet-parachain-system = { workspace = true, default-features = false }
cumulus-primitives-core = { workspace = true, default-features = false }
cumulus-primitives-utility = { workspace = true, default-features = false }
cumulus-pallet-aura-ext = { workspace = true, default-features = false }
cumulus-primitives-timestamp = { workspace = true, default-features = false }
pallet-collator-selection = { workspace = true, default-features = false }

# polkadot dependencies
polkadot-parachain-primitives = { workspace = true, default-features = false }
polkadot-runtime-common = { workspace = true, default-features = false }

# primitives
sp-authority-discovery = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
node-primitives = { workspace = true, default-features = false }
sp-offchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-session = { workspace = true, default-features = false }
sp-transaction-pool = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, default-features = false }

# frame dependencies
frame-executive = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
frame-benchmarking = { workspace = true, default-features = false }
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-authorship = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-insecure-randomness-collective-flip = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-aura = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-message-queue = { workspace = true, default-features = false }


# xcm
xcm = { workspace = true, default-features = false }
pallet-xcm = { workspace = true, default-features = false }
cumulus-pallet-xcm = { workspace = true, default-features = false }
cumulus-pallet-xcmp-queue = { workspace = true, default-features = false }
xcm-builder = { workspace = true, default-features = false }
xcm-executor = { workspace = true, default-features = false }
xcm-primitives = { workspace = true, default-features = false }
pallet-xcm-transactor = { workspace = true, default-features = false }

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "rustc-hex/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "xcm/std",
    "pallet-xcm/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-utility/std",
    "polkadot-parachain-primitives/std",
    "sp-consensus-babe/std",
    "sp-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "frame-executive/std",
    "sp-inherents/std",
    "pallet-scheduler/std",
    "node-primitives/std",
    "sp-offchain/std",
    "sp-core/std",
    "sp-std/std",
    "serde",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "sp-session/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "rustc-hex",
    "safe-mix/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-primitives-timestamp/std",
    "pallet-collator-selection/std",
    "staging-parachain-info/std",
    "cumulus-pallet-aura-ext/std",
    "pallet-aura/std",
    "sp-consensus-aura/std",
    "polkadot-runtime-common/std",
    "pallet-treasury/std",
    "pallet-preimage/std",
    "pallet-identity/std",
    "pallet-sudo/std",
    "frame-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "pallet-sudo/std",
    "pallet-xcm-transactor/std",
    "xcm-primitives/std",
]

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = ["sp-api/disable-logging"]

# Set timing constants (e.g. session period) to faster versions to speed up testing.
fast-runtime = []
